[package]
name = "rust-chess-board"
version = "0.0.1"
edition = "2021"
description = "A chess board implementation built in rust."
readme = "README.md"
repository = "https://github.com/SilverLinings89/rust-chess-board"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "chess"]
categories = ["gui", "wasm", "web-programming"]
authors=["Pascal Kraft"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
gloo-utils = "0.1.2"